--- a/Estate_App/templates/index.html
+++ b/Estate_App/templates/index.html
@@ -14,6 +14,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Properties</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="/register">Register</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </nav>
     </header>
