--- a/Estate_App/templates/index.html
+++ b/Estate_App/templates/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#">Contact</a></li>
                 <li><a href="/register">Register</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/login_register">New</a></li>
             </ul>
         </nav>
     </header>
