--- a/Estate_App/templates/manage_users.html
+++ b/Estate_App/templates/manage_users.html
@@ -16,7 +16,7 @@
 <body>
 
     <h2>Admin Dashboard - User Managemnent</h2>
-    <a href="{% url 'logout' %}" class="logout">Logout</a>
+    <a href="{% url 'admin_dashboard' %}" class="logout">Back</a>
     <table>
         <tr>
             <th>ID</th>
