--- a/Estate_App/static/css/form.css
+++ b/Estate_App/static/css/form.css
@@ -100,3 +100,27 @@ body {
         transform: translateY(0);
     }
 }
+
+.social-login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.social-login a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    padding: 5px 10px;
+    border-radius: 40%;
+    margin: 0 10px 0 20px;
+    transition: 0.3s;
+}
+ .social-login a img{
+    width: 40px;
+    height: 40px;
+    margin: 0 10px;
+    border-radius: 50%;
+    transition: 0.3s;
+ }
