--- a/Estate_App/templates/login.html
+++ b/Estate_App/templates/login.html
@@ -18,8 +18,11 @@
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit" class="btn">Login</button>
     </form>
+    <div class="social-login">
+        <a href="{% provider_login_url 'google' %}?next=/customer/dashboard/">
+            <img src="/static/images/google.png" alt="Google">Login with Google
+        </a>
     <a href="/register">Register</a>
-    <a href="{% provider_login_url 'google' %}?next=/customer/dashboard/">Login with Google</a>
-
+    </div>
 </body>
 </html>
