--- a/Estate_App/templates/admin_dashboard.html
+++ b/Estate_App/templates/admin_dashboard.html
@@ -21,6 +21,7 @@
             <li><a href="#"><i class="fas fa-bell"></i> Notifications</a></li>
             <li><a href="#"><i class="fas fa-credit-card"></i> Payments</a></li>
             <li><a href="#"><i class="fas fa-tasks"></i> Progress Status</a></li>
+            <li><a href="{% url 'generate_plan' %}"><i class="fas fa-tasks"></i> Generate 2D Plan</a></li>
             <li><a href="/logout" class="logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </nav>
