--- a/Estate_App/templates/admin_dashboard.html
+++ b/Estate_App/templates/admin_dashboard.html
@@ -103,8 +103,8 @@
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="/generate-blueprint">Generate Plan</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+                <li class="nav-item"> <a class="nav-link" href="/print_2d">2D Design</a></li>
+                <li class="nav-item"> <a class="nav-link" href="/fabric_2d">Fabric 2d</a></li>
               </ul>
             </div>
           </li>
