blender api failed

--- a/Estate_App/templates/admin_dashboard.html
+++ b/Estate_App/templates/admin_dashboard.html
@@ -102,7 +102,7 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="/generate-blueprint">Generate Plan</a></li>
+                <li class="nav-item"> <a class="nav-link" href="/plot_2d">Generate Plan</a></li>
                 <li class="nav-item"> <a class="nav-link" href="/print_2d">2D Design</a></li>
                 <li class="nav-item"> <a class="nav-link" href="/fabric_2d">Fabric 2d</a></li>
               </ul>
