--- a/Estate_App/templates/model_3d.html
+++ b/Estate_App/templates/model_3d.html
@@ -16,7 +16,7 @@
 <body>
     <h2>Property 3D View</h2>
     <model-viewer 
-        src="/static/models/house.glb" 
+        src="/static/models/floor_plan_3d.glb" 
         alt="3D Model of House" 
         auto-rotate 
         camera-controls 
